--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,13 @@
     font-family: 'custom-font';
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/food.jpg");
+    background-size: cover;
+}
+
 button {
     background-color: white;
     border: 1px solid black;
@@ -32,6 +39,7 @@ button:hover {
 }
 
 #app {
+    background-color: rgb(255, 255, 255,.8);
     position: relative;
     width: 65%;
     min-height: 80vh;
